sbt起動時のJVMオプションを調整