@@ -1,3 +1,3 @@
-set SBT_OPTS=-Xmx1024M -Dinput.encoding=Cp1252 -Dfile.encoding=SJIS -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M
+set SBT_OPTS=-Xmx1024M -Dinput.encoding=Cp1252 -Dfile.encoding=SJIS -XX:MaxMetaspaceSize=1024M
 
 java %SBT_OPTS% -jar sbt-launch.jar %*
